<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CMOV PA</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="connect">Connect</string>
    <string name="regist">Registar</string>
    <string name="nome">Nome:</string>
    <string name="morada">Morada:</string>
    <string name="datanasc">Data de Nascimento:</string>
    <string name="sexo">Sexo:</string>
    <string name="expandable_list_sample_action">trlalala</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="new_appointment">New Appointment</string>
    <string name="new_schedule">New Schedule</string>
    <string name="start_date">Start Date:</string>
    <string name="add">Add</string>
    <string name="create">Create</string>
    <string name="weekday">WeekDay</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="active_plan">Active Plan</string>
    <string name="future_plan">Future Plan</string>
</resources>
