<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/ScrollView1"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:orientation="vertical">
  
  <LinearLayout android:id="@+id/LinearLayout1"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:orientation="vertical">
  
    <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:id="@+id/registarTV" android:text="@string/regist" android:textSize="30dp" android:layout_marginTop="5dp" android:layout_width="wrap_content"></TextView>
    <TableLayout android:layout_width="match_parent" android:id="@+id/tableLayout1" android:layout_height="wrap_content" android:stretchColumns="1" android:layout_marginBottom="25dp" android:layout_marginTop="15dp">
        <TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:layout_height="wrap_content" android:text="@string/username" android:layout_width="wrap_content" android:id="@+id/textView1"></TextView>
            <EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/registUser">
                <requestFocus></requestFocus>
            </EditText>
        </TableRow>
        <TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:layout_height="wrap_content" android:text="@string/password" android:layout_width="wrap_content" android:id="@+id/textView2"></TextView>
            <EditText android:layout_height="wrap_content" android:inputType="textPassword" android:layout_width="wrap_content" android:id="@+id/registPass"></EditText>
        </TableRow>
        <TableRow android:id="@+id/tableRow3" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:layout_height="wrap_content" android:text="@string/password" android:layout_width="wrap_content" android:id="@+id/textView3"></TextView>
            <EditText android:layout_height="wrap_content" android:inputType="textPassword" android:layout_width="wrap_content" android:id="@+id/registPassConf"></EditText>
        </TableRow>
        <TableRow android:id="@+id/tableRow4" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:layout_height="wrap_content" android:text="@string/nome" android:layout_width="wrap_content" android:id="@+id/textView4"></TextView>
            <EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/registNome"></EditText>
        </TableRow>
        <TableRow android:id="@+id/tableRow5" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:layout_height="wrap_content" android:text="@string/morada" android:layout_width="wrap_content" android:id="@+id/textView5"></TextView>
            <EditText android:layout_height="wrap_content" android:inputType="textPostalAddress" android:layout_width="wrap_content" android:id="@+id/registMorada"></EditText>
        </TableRow>
        <TableRow android:id="@+id/tableRow6" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:id="@+id/textView6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sexo"></TextView>
            <Spinner android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/registSexo"></Spinner>
        </TableRow>
        <TableRow android:id="@+id/tableRow7" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/datanasc" android:textSize="10dp" android:id="@+id/registDataNascimentoButton"></Button>
            <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/registBirthDateTV" android:text="Press the button"></TextView>
        </TableRow>
    </TableLayout>
    <Button android:text="@string/regist" android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/registRegistButton"></Button>
   
   </LinearLayout> 
</ScrollView>
