<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/RelativeLayout1" xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_below="@+id/tableLayout1" android:layout_marginTop="40dp" android:text="@string/connect" android:id="@+id/loginConnectButton" android:layout_centerHorizontal="true"></Button>
    <TableLayout android:stretchColumns="1" android:layout_width="match_parent" android:id="@+id/tableLayout1" android:layout_height="wrap_content" android:layout_marginTop="150dp">
        <TableRow android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/tableRow2">
            <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/username" android:layout_width="wrap_content" android:id="@+id/usernameTV"></TextView>
            <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/loginUser" android:inputType="text">
            </EditText>
        </TableRow>
        <TableRow android:layout_height="wrap_content" android:id="@+id/tableRow1" android:layout_width="wrap_content">
            <TextView android:layout_height="wrap_content" android:text="@string/password" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/passwordTV"></TextView>
            <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/loginPass" android:inputType="textPassword">
            </EditText>
        </TableRow>
    </TableLayout>
    <Button android:layout_marginBottom="44dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:text="@string/regist" android:id="@+id/loginRegistButton"></Button>
    <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content" android:src="@drawable/health_icon" android:id="@+id/imageView1" android:layout_alignParentTop="true" android:layout_marginTop="17dp" android:layout_centerHorizontal="true"></ImageView>
</RelativeLayout>
