<?xml version="1.0" encoding="UTF-8"?>
    <TableLayout android:id="@+id/tableLayout1" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
        <TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:layout_height="wrap_content" android:id="@+id/textView1" android:text="@string/weekday" android:layout_width="wrap_content"></TextView>
            <Spinner android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/new_workday_weekday_spinner"></Spinner>
        </TableRow>
        <TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:layout_height="wrap_content" android:id="@+id/textView2" android:text="@string/start" android:layout_width="wrap_content"></TextView>
            <EditText android:layout_height="wrap_content" android:inputType="number" android:layout_width="wrap_content" android:id="@+id/editText1">
                <requestFocus></requestFocus>
            </EditText>
            <Spinner android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/new_workday_start_spinner"></Spinner>
        </TableRow>
        <TableRow android:id="@+id/tableRow3" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:layout_height="wrap_content" android:id="@+id/textView3" android:text="@string/end" android:layout_width="wrap_content"></TextView>
            <EditText android:layout_height="wrap_content" android:inputType="number" android:layout_width="wrap_content" android:id="@+id/editText2"></EditText>
            <Spinner android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/new_workday_end_spinner"></Spinner>
        </TableRow>
    </TableLayout>
    